force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/Bitbucket_Metadata_Column__mdt.object-meta.xml
<CustomObject>
    <description>Defines columns for each Bitbucket Metadata Type. Each record represents one column in the datatable.</description>
    <label>Bitbucket Metadata Column</label>
    <pluralLabel>Bitbucket Metadata Columns</pluralLabel>
</CustomObject>