force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/Collection_Separator__c.field-meta.xml
<CustomField>
    <fullName>Collection_Separator__c</fullName>
    <label>Collection Separator</label>
    <description>Separator when joining collection values (default: "; ")</description>
    <type>Text</type>
    <length>10</length>
    <defaultValue>"; "</defaultValue>
</CustomField>