force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/Column_Label__c.field-meta.xml
<CustomField>
    <fullName>Column_Label__c</fullName>
    <description>Display label in datatable header (e.g., &quot;Object Name&quot;, &quot;Active&quot;)</description>
    <label>Column Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>