force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/Column_Type__c.field-meta.xml
<CustomField>
    <fullName>Column_Type__c</fullName>
    <label>Column Type</label>
    <description>Datatable column type</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>text</fullName><default>true</default><label>Text</label></value>
            <value><fullName>boolean</fullName><default>false</default><label>Boolean</label></value>
            <value><fullName>number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>url</fullName><default>false</default><label>URL</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>