force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/Column_Width__c.field-meta.xml
<CustomField>
    <fullName>Column_Width__c</fullName>
    <description>The customMetadataExplorer.js will contain a function that  detect the container width, and set each column’s initialWidth in pixels based on the percentage set in. It recalculate on window/container resize.</description>
    <label>Column Width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>