force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>API name used in datatable data (e.g., &quot;objectName&quot;, &quot;active&quot;)</description>
    <label>Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>