force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/Is_Collection__c.field-meta.xml
<CustomField>
    <fullName>Is_Collection__c</fullName>
    <label>Is Collection</label>
    <description>If true, collects multiple XML elements and joins with separator</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>