force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <label>Metadata Type</label>
    <description>Parent metadata type this column belongs to</description>
    <type>MetadataRelationship</type>
    <referenceTo>Bitbucket_Metadata_Type__mdt</referenceTo>
    <relationshipLabel>Columns</relationshipLabel>
    <relationshipName>Columns</relationshipName>
</CustomField>