force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Column display order (lower numbers appear first/left)</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>