force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/fields/XML_Path__c.field-meta.xml
<CustomField>
    <fullName>XML_Path__c</fullName>
    <description>Path to extract value from XML. Use dot notation for nested elements (e.g., &quot;fullName&quot;, &quot;criteriaItems.field&quot;). Special values: $OBJECT_NAME (from filename), $FILE_PATH</description>
    <inlineHelpText>XML element to extract. Use $OBJECT_NAME for filename-derived object, $FILE_PATH for full path. Use dot notation for nested elements.</inlineHelpText>
    <label>XML Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>