force-app/main/default/objects/Bitbucket_Metadata_Column__mdt/listViews/Full_View.listView-meta.xml
<ListView>
    <fullName>Full_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <columns>IsProtected</columns>
    <columns>Collection_Separator__c</columns>
    <columns>Column_Label__c</columns>
    <columns>Column_Type__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Is_Collection__c</columns>
    <columns>Metadata_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>XML_Path__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full View</label>
    <language>en_US</language>
</ListView>